2025. 주석 해제